Added Meta Content

--- a/index.html
+++ b/index.html
@@ -29,16 +29,35 @@ title: Home
         <img class="card-img-top img-fluid" src="media/student-ruler.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Mentoring</h4>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">
+            Our <strong>Higher Group</strong> and <strong>Turnaround</strong> mentoring programs offer two unique experiences.
+            </p>
+            <a href="/mentoring/" class="btn btn-primary btn-sm">Learn more about our mentoring programs</a>
         </div>
       </div>
       <div class="card">
         <img class="card-img-top img-fluid" src="media/student-stairs.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Tutoring</h4>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <p class="card-text">
+              <strong>Kid Connections</strong> tutoring helps enhance academic learning for students.
+            </p>
+            <a href="/tutoring/" class="btn btn-link btn-sm">Learn more about our tutoring programs</a>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3">
+    <div class="card card-inverse" style="background-color: #333; border-color: #333;">
+  <div class="card-block">
+    <h3 class="card-title">Become a Mentor</h3>
+    <p class="card-text">For most mentors, this experience changes their lives, taps their inner resources, and challenges their convictions and beliefs. Youth who are overcoming stressors in their lives, such as poverty, discrimination, abusive situations, addictions, unstable homes, and academic life are the primary marketing focus of the M.A.Y.A. Foundation.</p>
+ <p class="card-text text-muted">
+Become a mentor today by contacting us through our website. Provide your first and last name and email address for us to contact you.</p>
+    <a href="mailto:info@maya.foundation?subject=Mentoring" class="btn btn-danger">Volunteer</a>
+  </div>
+      </div>
+    </div>
+</div>
   </div>
 </section>
