--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -15,7 +15,7 @@ title: Tutoring Programs
         </h3>
     </div>
     <div class="col-md-8">
-        <p class="lead">Kid Connections is a tutoring program that strives to incorporate the core principles of the organization through various activities to our program participates. Participants are offered help with homework, SOL related computer activities, art, music, STEM, and fitness activities, snack, and field trips. Students are transported from school to the program.</p>
+        <p class="lead">Kid Connections is a tutoring program that strives to incorporate the core principles of the organization through various activities to our program participants. Participants are offered help with homework, SOL related computer activities, art, music, STEM, and fitness activities, snack, and field trips. Students are transported from school to the program.</p>
     </div>
     <div class="col-md-4">
         <img src="/media/student-desk.jpg" class="img-fluid img-thumbnail">
