Updated background colors and logo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 --- 
-layout: default 
+layout: home 
 title: Home 
 ---
 
-{% include navigation-home.html %}
 <section id="call-to-action" class="my-1">
   <h3 class="text-xs-center">
     Become a mentor, change a child's life
