--- a/events/index.html
+++ b/events/index.html
@@ -2,3 +2,39 @@
 layout: page 
 title: Events
 ---
+
+<p>
+    This is a paragraph of content. Notice the p tags.
+</p>
+<p>
+    You can create another paragraph of content. Notice how they have space between each paragraph.
+</p>
+<p>
+    You can format text. <strong>You can make things bold by using the strong tags.</strong>  <em>You can also italicize text using the emphasis (em) tags.</em>
+</p>
+<p>
+    Do you need a hyperlink? <a href="https://www.connectva.org/" target="_blank">Here's a hyperlink to ConnectVA</a>. The href attribute defines where to go. If you want the hyperlink to open in a new, blank tab; simply use target="_blank".
+</p>
+<p>
+    How about an image? Use the img tag. Just reference the name of the image in the media folder like you see below. Pay attention to the number of slashes.
+    <br />
+    <img src="/media/example.jpg" />
+</p>
+<p>
+    Finally, how about a list? Here's how you can create a list:
+</p>
+Unordered List:
+<ul>
+    <li>First</li>
+    <li>Second</li>
+    <li>Third</li>
+</ul>
+Ordered List:
+<ol>
+    <li>First</li>
+    <li>Second</li>
+    <li>Third</li>
+</ol>
+<p>
+    UL for unordered lists. OL for ordered lists. LI for list items.
+</p>
