--- a/events/index.html
+++ b/events/index.html
@@ -18,7 +18,7 @@ title: Events
 <p>
     How about an image? Use the img tag. Just reference the name of the image in the media folder like you see below. Pay attention to the number of slashes.
     <br />
-    <img src="/media/example.jpg" />
+    <img src="/media/example.jpg" class="img-fluid" />
 </p>
 <p>
     Finally, how about a list? Here's how you can create a list:
