--- a/mentoring/index.html
+++ b/mentoring/index.html
@@ -40,3 +40,17 @@ title: Mentoring Programs
         <p class="lead">Higher Ground engages the mentoring of adults. The mentoring relationship is utilized to establish a program of change in the young adult's life. The mentor encourages goal-setting, self discipline, and skill development that improves the young adult's sense of hopefulness. Mentors and adults work one-on-one and are also offered opportunities to participate in monthly group activities and outings.</p>
     </div>
 </div>
+<div class="row">
+    <div class="col-md-12">
+        <h3 class="display-3">
+            <small>
+                <i class="fa fa-arrow-up" aria-hidden="true"></i>
+                <span class="text-muted">
+Mentor 2 Motivate Mentoring Program
+</span>
+</small>
+</h3>
+</div>
+<div class="col-md-4">
+<p class="lead">Mentor 2 Motivate is a program designed to work with middle school aged students to help develop various skills that they will be able to use throughout their daily lives. 
+Participants of the program will get the chance to experience many different opportunities through a variety of workshops, sessions and cultural activities.
