--- a/events/index.html
+++ b/events/index.html
@@ -1,4 +1,42 @@
---- 
-layout: page 
+---
+layout: page
 title: Events
 ---
+
+<div class="row">
+
+    <div class="col-md-12">
+
+        <h3 class="display-3">
+
+            <small>
+
+                <span class="text-muted">
+
+                    Back To School Supply Drive
+
+                </span>
+
+            </small>
+
+        </h3>
+
+    </div>
+
+    <div class="col-md-8">
+
+        <p class="lead">Since 2014 the MAYA Foundation, Inc. in partnership with From One Hand to Another, the Reggie/Pamela Williams Foundation and Youth, Excel and Advancement, LLC. have been able to to provide book bags full of school supplies for over 700 youth in Richmond, Petersburg and other surrounding counties.
+        These book bags were given so that the students would have the means to have a productive and successful school year.
+        <p> 
+        Collection for the 2017-2018 will begin July 2017. If you are interested in donating, please drop all donations off at 910 S. Harrison Street Richmond,VA 23220 or contact the program coordinator at 804-305-1697.
+    </div>
+
+    <div class="col-md-4">
+
+      
+
+    </div>
+
+</div>
+
+
