--- a/events/index.html
+++ b/events/index.html
@@ -2,7 +2,6 @@
 layout: page
 title: Events
 ---
-events.html
 <div class="row">
 
     <div class="col-md-12">
@@ -31,18 +30,20 @@ events.html
     </div>
 
     <div class="col-md-4">
+        
     <hr/>
 
   <span class="text-muted">
+      
   Annual Turkey and Food Drive
 
   </span>
 
-</small>
+    </small>
 
-</h3>
+    </h3>
 
-</div>
+    </div>
 
 <div class="col-md-8">
 
@@ -50,7 +51,7 @@ events.html
 <p class="lead">Collection for items will begin in October 2017.
 
 
-<p class-"lead">If you are interested in donating to either of our drives, please feel free to contact the program coordinator at <brittany@maya.foundation> or drop off your donations at 910 S. Harrison St. Richmond, VA 23220.
+<p class="lead">If you are interested in donating to either of our drives, please feel free to contact the program coordinator at <brittany@maya.foundation> or drop off your donations at 910 S. Harrison St. Richmond, VA 23220.
 
     </div>
 
