Updated to Bootstrap 6

--- a/events/index.html
+++ b/events/index.html
@@ -1,60 +1,52 @@
----
+--- 
 layout: page
 title: Events
 ---
-<div class="row">
 
-    <div class="col-md-12">
-
-        <h3 class="display-3">
-
-            <small>
-
-                <span class="text-muted">
-
-                    Back To School Supply Drive
-
-                </span>
-
-            </small>
-
-        </h3>
-
+<div class="m-5">
+    <div class="card my-2">
+        <h3 class="card-header">
+            Back To School Supply Drive
+        </h3>        
+        <div class="card-block">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h6 class="card-title">September 1, 2016</h6>
+                    <p class="card-text">
+                        Since 2014, the MAYA Foundation,Inc. in partnership with From One Hand to Another, the Reggie/Pamela Williams Foundation and Youth, Excel and Advancement, LLC. have been able to to provide book bags full of school supplies for over 700 youth in Richmond, Petersburg and other surrounding counties. These book bags were given so that the students would have the means to have a productive and successful school year.
+                    </p> 
+                    <div class="alert alert-success" role="alert">
+                        Collection for the 2017-2018 school year will begin July 2017.
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <img src="/media/programs/backpacks.jpg" class="img-fluid img-thumbnail" />
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="col-md-8">
-
-        <p class="lead">Since 2014, the MAYA Foundation,Inc. in partnership with From One Hand to Another, the Reggie/Pamela Williams Foundation and Youth, Excel and Advancement, LLC. have been able to to provide book bags full of school supplies for over 700 youth in Richmond, Petersburg and other surrounding counties.
-        These book bags were given so that the students would have the means to have a productive and successful school year.
-        <p class="lead">Collection for the 2017-2018 school year will begin July 2017.
+    <div class="card my-2">
+        <h3 class="card-header">
+            Annual Turkey and Food Drive
+        </h3>        
+        <div class="card-block">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h6 class="card-title">November 15, 2016</h6>
+                    <p class="card-text">
+                        Beginning back in 2012, the MAYA Foundation has sponsored an annual turkey and food drive. With the help of community members, local grocery stores and corporate sponsors, we have been able to provide over 400 families with turkey and food baskets during the holiday season.
+                    </p>
+                    <p class="card-text">
+                        If you are interested in donating to either of our drives, please feel free to contact the program coordinator at <a href="mailto:brittany@maya.foundation">brittany@maya.foundation</a> or drop off your donations at 910 S. Harrison St. Richmond, VA 23220.
+                    </p> 
+                    <div class="alert alert-success" role="alert">
+                        Collection for items will begin in October 2017.
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <img src="/media/programs/grocery.jpg" class="img-fluid img-thumbnail" />
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="col-md-4">
-        
-    <hr/>
-
-  <span class="text-muted">
-      
-  Annual Turkey and Food Drive
-
-  </span>
-
-    </small>
-
-    </h3>
-
-    </div>
-
-<div class="col-md-8">
-
-<p class="lead">Beginning back in 2012, the MAYA Foundation has sponsored an annual turkey and food drive. With the help of community members, local grocery stores and corporate sponsors, we have been able to provide over 400 families with turkey and food baskets during the holiday season.
-<p class="lead">Collection for items will begin in October 2017.
-
-
-<p class="lead">If you are interested in donating to either of our drives, please feel free to contact the program coordinator at <brittany@maya.foundation> or drop off your donations at 910 S. Harrison St. Richmond, VA 23220.
-
-    </div>
-
 </div>
-
-
