--- a/mentoring/index.html
+++ b/mentoring/index.html
@@ -2,6 +2,7 @@
 layout: page 
 title: Mentoring Programs 
 ---
+
 <div class="row">
     <div class="col-md-12">
         <h3 class="display-3">
@@ -17,7 +18,7 @@ title: Mentoring Programs
         <p class="lead">Turnaround focuses on students who are chronically suspended from middle and high school. The goal of the program is to rekindle the youth's commitment to learning and being successful in the classroom . By empowering young people to finish school, mentors are improving the student's success in the work world as adults.</p>
     </div>
     <div class="col-md-4">
-        <img src="/media/student-outside.jpg" class="img-fluid img-thumbnail">
+        <img src="/media/programs/student-outside.jpg" class="img-fluid img-thumbnail" />
     </div>
 </div>
 <hr />
@@ -33,7 +34,7 @@ title: Mentoring Programs
         </h3>
     </div>
     <div class="col-md-4">
-        <img src="/media/student-stairs.jpg" class="img-fluid img-thumbnail">
+        <img src="/media/programs/student-stairs.jpg" class="img-fluid img-thumbnail" />
     </div>
     <div class="col-md-8">
         <p class="lead">Higher Ground engages the mentoring of adults. The mentoring relationship is utilized to establish a program of change in the young adult's life. The mentor encourages goal-setting, self discipline, and skill development that improves the young adult's sense of hopefulness. Mentors and adults work one-on-one and are also offered opportunities to participate in monthly group activities and outings.</p>
@@ -42,16 +43,20 @@ title: Mentoring Programs
 <hr/>
 <div class="row">
     <div class="col-md-12">
-        <h3 class="display-3">
-            <small>              
-                <span class="text-muted">
-Mentor 2 Motivate Mentoring Program
-</span>
-</small>
-</h3>
+        <div class="hidden-md-up">
+            <img src="/media/programs/mentor2motivate.jpg" class="img-fluid mx-auto" />
+        </div>
+        <div class="hidden-sm-down">
+            <img src="/media/programs/mentor2motivate.jpg" />
+        </div>
+    </div>
+    <div class="col-md-8">
+        <p class="lead">
+            Mentor 2 Motivate is a program designed to work with middle school aged students to help develop various skills that they will be able to use throughout their daily lives. Participants of the program will get the chance to experience many different opportunities through a variety of workshops, sessions and cultural activities.
+        </p>
+    </div>
+    <div class="col-md-4">
+        <img src="/media/programs/mentor.jpg" class="img-fluid img-thumbnail" />
+    </div>
 </div>
-<div class="col-md-4">
-<p class="lead">Mentor 2 Motivate is a program designed to work with middle school aged students to help develop various skills that they will be able to use throughout their daily lives.
-Participants of the program will get the chance to experience many different opportunities through a variety of workshops, sessions and cultural activities.
-
 
