--- a/supporters/index.html
+++ b/supporters/index.html
@@ -3,18 +3,57 @@ layout: page
 title: Supporters
 ---
 
-<div class="card">
-  <a href="http://martinsfoods.com/" target="_blank">
-    <img class="card-img-top img-fluid rounded" src="/media/supporters/martins.jpg">
-  </a>
-</div>
-<div class="card">
-  <a href="http://photographybycandice.blogspot.com/" target="_blank">
-    <img class="card-img-top img-fluid rounded" src="/media/supporters/candice-patrice-photography.jpg">
-  </a>
-</div>
-<div class="card">
-  <a href="http://walmart.com" target="_blank">
-    <img class="card-img-top img-fluid rounded" src="/media/supporters/walmart.jpg">
-  </a>
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top img-thumbnail" src="/media/supporters/martins.jpg">
+    <div class="card-block">
+      <h4 class="card-title">Martin's Food Markets</h4>
+      <p class="card-text">
+        For over 90 years, Martin's has worked to provide you with unmatched selection, quality and value every time you visit one of their stores.
+      </p>
+    </div>
+    <div class="card-footer bg-inverse">
+      <small class="text-muted">
+        <a href="http://richmond.martinsfoods.com/" target="_blank" class="text-white">
+          http://richmond.martinsfoods.com
+        </a>
+      </small>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top img-thumbnail" src="/media/supporters/candice-patrice-photography.jpg">
+    <div class="card-block">
+      <h4 class="card-title">
+        Candice Patrice Photography
+      </h4>
+      <p class="card-text">
+        Candice Fleming is a photographer located in Richmond, Virginia with a style that is simple and clean with a modern twist.
+      </p>
+    </div>
+    <div class="card-footer bg-inverse">
+      <small class="text-muted">
+        <a href="http://photographybycandice.blogspot.com/" target="_blank" class="text-white">
+          http://photographybycandice.blogspot.com
+        </a>
+      </small>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top img-thumbnail" src="/media/supporters/walmart.jpg">
+    <div class="card-block">
+      <h4 class="card-title">
+        Walmart
+      </h4>
+      <p class="card-text">
+        Walmart started small, with a single discount store and the simple idea of selling more for less, and has grown over the last 50 years into the largest retailer in the world.
+      </p>
+    </div>
+    <div class="card-footer bg-inverse">
+      <small class="text-muted">
+        <a href="http://walmart.com/" target="_blank" class="text-white">
+          http://walmart.com
+        </a>
+      </small>
+    </div>
+  </div>
 </div>
