--- a/tutoring/index.html
+++ b/tutoring/index.html
@@ -5,19 +5,12 @@ title: Tutoring Programs
 
 <div class="row">
     <div class="col-md-12">
-        <h3 class="display-3">
-            <small>
-                <i class="fa fa-puzzle-piece" aria-hidden="true"></i>
-                <span class="text-muted">
-                    Kid Connections Tutoring Program
-                </span>
-            </small>
-        </h3>
+        <img src="/media/programs/kidconnections.jpg" />
     </div>
     <div class="col-md-8">
         <p class="lead">Kid Connections is a tutoring program that strives to incorporate the core principles of the organization through various activities to our program participants. Participants are offered help with homework, SOL related computer activities, art, music, STEM, and fitness activities, snack, and field trips. Students are transported from school to the program.</p>
     </div>
     <div class="col-md-4">
-        <img src="/media/student-desk.jpg" class="img-fluid img-thumbnail">
+        <img src="/media/programs/student-desk.jpg" class="img-fluid img-thumbnail">
     </div>
 </div>
