--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Home
 ---
 
 <section id="call-to-action" class="my-1">
-  <h3 class="text-xs-center">
+  <h3 class="text-center">
     Become a mentor, change a child's life
   </h3>
-  <div class="text-xs-center">
+  <div class="text-center">
     <div class="btn-group" role="group" aria-label="Basic example">
       <a href="https://www.paypal.com/il/cgi-bin/webscr?cmd=_home&country_lang.x=true" target="_blank" class="btn btn-outline-primary">Donate</a>
       <a href="#programs" class="btn btn-outline-success">Learn More</a>
@@ -25,7 +25,7 @@ title: Home
   <div class="card-deck-wrapper">
     <div class="card-deck">
       <div class="card">
-        <img class="card-img-top img-fluid" src="media/student-ruler.jpg" alt="Card image cap">
+        <img class="card-img-top img-fluid" src="/media/programs/student-ruler.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Mentoring</h4>
           <p class="card-text">
@@ -35,17 +35,17 @@ title: Home
         </div>
       </div>
       <div class="card">
-        <img class="card-img-top img-fluid" src="media/student-stairs.jpg" alt="Card image cap">
+        <img class="card-img-top img-fluid" src="/media/programs/student-stairs.jpg" alt="Card image cap">
         <div class="card-block">
           <h4 class="card-title">Tutoring</h4>
           <p class="card-text">
               <strong>Kid Connections</strong> tutoring helps enhance academic learning for students.
             </p>
-            <a href="/tutoring/" class="btn btn-link btn-sm">Learn more about our tutoring programs</a>
+            <a href="/tutoring/" class="btn btn-primary btn-sm">Learn more about our tutoring programs</a>
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row mt-4">
       <div class="col-sm-8 offset-sm-2 col-md-6 offset-md-3">
     <div class="card card-inverse" style="background-color: #333; border-color: #333;">
   <div class="card-block">
