--- a/events/index.html
+++ b/events/index.html
@@ -44,7 +44,7 @@ title: Events
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <img src="/media/programs/IMG_1982.JPG .jpg" class="img-fluid img-thumbnail" />
+                    <img src="/media/programs/IMG_1982.jpg" class="img-fluid img-thumbnail" />
                 </div>
             </div>
         </div>
