--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,6 +3,10 @@ layout: page
 title: Supporters
 ---
 
+<a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox">
+    <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid">
+</a>
+
 <h4 class="display-4">Thanksgiving Drive</h4>
 <p class="lead">
   
@@ -40,3 +44,11 @@ title: Supporters
     </div>
   </div>
 </div>
+
+
+<script type="text/javascript">
+$(document).on('click', '[data-toggle="lightbox"]', function(event) {
+    event.preventDefault();
+    $(this).ekkoLightbox();
+});
+</script>
