--- a/gallery/index.html
+++ b/gallery/index.html
@@ -3,8 +3,8 @@ layout: page
 title: Supporters
 ---
 
-<a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox">
-    <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid">
+<a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-title="A random title" data-footer="A custom footer text">
+    <img src="https://unsplash.it/600.jpg?image=250" class="img-fluid">
 </a>
 
 <h4 class="display-4">Thanksgiving Drive</h4>
