--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,48 +1,22 @@
 --- 
 layout: page 
-title: Supporters
+title: Image Gallery
 ---
 
-<a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-title="A random title" data-footer="A custom footer text">
-    <img src="https://unsplash.it/600.jpg?image=250" class="img-fluid">
-</a>
-
-<h4 class="display-4">Thanksgiving Drive</h4>
+<h3>Thanksgiving Drive</h3>
 <p class="lead">
-  
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est, et condimentum diam sagittis quis. Nam et justo lacus. Curabitur egestas pretium accumsan. Proin semper at tortor mollis commodo. Maecenas velit erat, tristique nec ante nec, auctor sagittis felis. 
 </p>
+
+<div class="card-deck">
 <div class="card">
-  <img class="card-img-top" src="..." alt="Card image cap">
+    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
+    <img class="card-img-top" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
+    </a>
   <div class="card-block">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
   </div>
 </div>
-<hr />
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
