--- a/gallery/index.html
+++ b/gallery/index.html
@@ -11,7 +11,33 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
 <div class="card-deck">
 <div class="card">
     <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
-    <img class="card-img-top" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
+    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
+    </a>
+  <div class="card-block">
+    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+  </div>
+</div>    
+<div class="card">
+    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
+    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
+    </a>
+  <div class="card-block">
+    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+  </div>
+</div>
+</div>
+<div class="card-deck">
+<div class="card">
+    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
+    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
+    </a>
+  <div class="card-block">
+    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+  </div>
+</div>    
+<div class="card">
+    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
+    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
     </a>
   <div class="card-block">
     <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
