--- a/gallery/index.html
+++ b/gallery/index.html
@@ -2,13 +2,13 @@
 layout: page 
 title: Image Gallery
 ---
-
+<hr class="mt-5" />
 <h3>Thanksgiving Drive</h3>
 <p class="lead">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est, et condimentum diam sagittis quis. Nam et justo lacus. Curabitur egestas pretium accumsan. Proin semper at tortor mollis commodo. Maecenas velit erat, tristique nec ante nec, auctor sagittis felis. 
 </p>
 
-<div class="card-deck">
+<div class="card-deck my-3">
 <div class="card">
     <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
     <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
