--- a/gallery/index.html
+++ b/gallery/index.html
@@ -7,43 +7,43 @@ title: Image Gallery
 <p class="lead">
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est, et condimentum diam sagittis quis. Nam et justo lacus. Curabitur egestas pretium accumsan. Proin semper at tortor mollis commodo. Maecenas velit erat, tristique nec ante nec, auctor sagittis felis. 
 </p>
-
-<div class="card-deck my-3">
+<div class="card-deck my-2">
 <div class="card">
-    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
-    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
-    </a>
+  <a href="/media/gallery/thanksgiving_drive_1.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
+    <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_1-thumb.jpg" alt="Card image cap">
+  </a>
   <div class="card-block">
     <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
   </div>
 </div>    
 <div class="card">
-    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
-    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
-    </a>
+  <a href="/media/gallery/thanksgiving_drive_2.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Integer aliquam commodo justo, in finibus libero sollicitudin ut. Pellentesque viverra lectus lobortis tellus pellentesque, vitae pretium augue lacinia.">
+    <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_2-thumb.jpg" alt="Card image cap">
+  </a>
   <div class="card-block">
-    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+    <p class="card-text">Integer aliquam commodo justo, in finibus libero sollicitudin ut. Pellentesque viverra lectus lobortis tellus pellentesque, vitae pretium augue lacinia.</p>
   </div>
 </div>
 </div>
-<div class="card-deck">
+<div class="card-deck my-2">
 <div class="card">
-    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
-    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
-    </a>
+  <a href="/media/gallery/thanksgiving_drive_3.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Vestibulum vehicula nulla id ornare bibendum. Aliquam malesuada ac metus eu iaculis.">
+    <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_3-thumb.jpg" alt="Card image cap">
+  </a>
   <div class="card-block">
-    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+    <p class="card-text">Vestibulum vehicula nulla id ornare bibendum. Aliquam malesuada ac metus eu iaculis.</p>
   </div>
 </div>    
 <div class="card">
-    <a href="https://unsplash.it/1200/768.jpg?image=250" data-toggle="lightbox" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
-    <img class="card-img-top img-fluid" src="https://unsplash.it/600.jpg?image=250" alt="Card image cap">
-    </a>
+  <a href="/media/gallery/thanksgiving_drive_4.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Aenean molestie, felis fermentum pretium mattis, felis dui tincidunt nisi, vitae maximus nisi mauris et nunc. Nulla eleifend erat magna, varius tempus lorem euismod eu. Nulla facilisi.">
+    <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_4-thumb.jpg" alt="Card image cap">
+  </a>
   <div class="card-block">
-    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+    <p class="card-text">Aenean molestie, felis fermentum pretium mattis, felis dui tincidunt nisi, vitae maximus nisi mauris et nunc. Nulla eleifend erat magna, varius tempus lorem euismod eu. Nulla facilisi.</p>
   </div>
 </div>
 </div>
+<hr />
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
