--- a/gallery/index.html
+++ b/gallery/index.html
@@ -9,7 +9,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
 </p>
 <div class="card-deck my-2">
 <div class="card">
-  <a href="/media/gallery/thanksgiving_drive_1.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.">
+  <a href="/media/gallery/thanksgiving_drive_1.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery">
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_1-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
