--- a/gallery/index.html
+++ b/gallery/index.html
@@ -17,7 +17,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
   </div>
 </div>    
 <div class="card">
-  <a href="/media/gallery/thanksgiving_drive_2.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Integer aliquam commodo justo, in finibus libero sollicitudin ut. Pellentesque viverra lectus lobortis tellus pellentesque, vitae pretium augue lacinia.">
+  <a href="/media/gallery/thanksgiving_drive_2.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery">
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_2-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
@@ -27,7 +27,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
 </div>
 <div class="card-deck my-2">
 <div class="card">
-  <a href="/media/gallery/thanksgiving_drive_3.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Vestibulum vehicula nulla id ornare bibendum. Aliquam malesuada ac metus eu iaculis.">
+  <a href="/media/gallery/thanksgiving_drive_3.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery">
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_3-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
@@ -35,7 +35,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
   </div>
 </div>    
 <div class="card">
-  <a href="/media/gallery/thanksgiving_drive_4.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery" data-footer="Aenean molestie, felis fermentum pretium mattis, felis dui tincidunt nisi, vitae maximus nisi mauris et nunc. Nulla eleifend erat magna, varius tempus lorem euismod eu. Nulla facilisi.">
+  <a href="/media/gallery/thanksgiving_drive_4.jpg" data-toggle="lightbox" data-gallery="thanksgiving-drive-gallery">
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_4-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
