--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@ title: Image Gallery
 <hr class="mt-5" />
 <h3>Thanksgiving Drive</h3>
 <p class="lead">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est, et condimentum diam sagittis quis. Nam et justo lacus. Curabitur egestas pretium accumsan. Proin semper at tortor mollis commodo. Maecenas velit erat, tristique nec ante nec, auctor sagittis felis. 
+
 </p>
 <div class="card-deck my-2">
 <div class="card">
@@ -13,7 +13,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_1-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
-    <p class="card-text">Donec fringilla vestibulum fringilla. Integer vestibulum, nulla et molestie ornare, velit ligula consectetur ipsum, eu convallis nibh lacus id nisi. In tincidunt lacinia ante eu faucibus.</p>
+    <p class="card-text"></p>
   </div>
 </div>    
 <div class="card">
@@ -21,7 +21,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_2-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
-    <p class="card-text">Integer aliquam commodo justo, in finibus libero sollicitudin ut. Pellentesque viverra lectus lobortis tellus pellentesque, vitae pretium augue lacinia.</p>
+    <p class="card-text"> </p>
   </div>
 </div>
 </div>
@@ -31,7 +31,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_3-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
-    <p class="card-text">Vestibulum vehicula nulla id ornare bibendum. Aliquam malesuada ac metus eu iaculis.</p>
+    <p class="card-text"></p>
   </div>
 </div>    
 <div class="card">
@@ -39,7 +39,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam luctus rutrum est
     <img class="card-img-top img-fluid" src="/media/gallery/thanksgiving_drive_4-thumb.jpg" alt="Card image cap">
   </a>
   <div class="card-block">
-    <p class="card-text">Aenean molestie, felis fermentum pretium mattis, felis dui tincidunt nisi, vitae maximus nisi mauris et nunc. Nulla eleifend erat magna, varius tempus lorem euismod eu. Nulla facilisi.</p>
+    <p class="card-text"> </p>
   </div>
 </div>
 </div>
